# svtplay-dl-gui

./: Cargo.toml  build.rs
html/: main.html  main.tis
src/: main.rs
src/services/: mod.rs  svt.rs  tv4.rs
