[package]
name = "svtplay-dl-gui"
version = "0.1.0"
authors = ["Niklas <me@sodapop.se>"]
description = "Lorem ipsum"

[dependencies]
sciter-rs = "0.5.44"
scraper = "0.8.1"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
regex = "*"

[package.metadata.bundle]
name = "svtplay-dl-gui"
identifier = "se.sodapop.svtplay-dl-gui"
# icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
resources = ["html", "beep.wav", "scapp"]
copyright = "Copyright (c) Niklas Tegnander 2018. All rights reserved."
# category = "Developer Tool"
# short_description = "An example application."
# long_description = """
# Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
# eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
# enim ad minim veniam, quis nostrud exercitation ullamco laboris
# nisi ut aliquip ex ea commodo consequat.
# """
# deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
osx_frameworks = ["./sciter-osx-64.framework"]